fixed alignment

--- a/css/main.css
+++ b/css/main.css
@@ -40,8 +40,8 @@ table:nth-of-type(1) {
     display:table;
     width:100%;
 }
-table:nth-of-type(1) th:nth-of-type(2) {
-    width:10%;
+th:nth-of-type(1) {
+    width:50%;
 }
 
 /*****************************************************************************/
